Edited readme.md, fixed today habit style problem on mobiles

--- a/src/styles.less
+++ b/src/styles.less
@@ -187,7 +187,6 @@ b {
 }
 
 .today {
-    margin: 0 4px;
     position: relative;
     border-radius: 50%;
     font-weight: bold;
